--- a/templates/email/appointment_confirmation.html.twig
+++ b/templates/email/appointment_confirmation.html.twig
@@ -19,7 +19,7 @@
         <table style="width: 100%; font-size: 15px; line-height: 1.8;">
             <tr>
                 <td style="color: #666; padding: 5px 0;"><strong>{{ 'confirm.date' | trans }}:</strong></td>
-                <td style="color: #333; padding: 5px 0;">{{ appointment.date|date('d.m.Y') }} ({% set dayNames = {0: 'Неделя', 1: 'Понеделник', 2: 'Вторник', 3: 'Сряда', 4: 'Четвъртък', 5: 'Петък', 6: 'Събота'} %}{{ dayNames[appointment.date|date('w')] }})</td>
+                <td style="color: #333; padding: 5px 0;">{{ appointment.date|date('d.m.Y') }} ({% set dayNames = {0: ('appointment.days.sun'|trans), 1: ('appointment.days.mon'|trans), 2: ('appointment.days.tue'|trans), 3: ('appointment.days.wed'|trans), 4: ('appointment.days.thu'|trans), 5: ('appointment.days.fri'|trans), 6: ('appointment.days.sat'|trans)} %}{{ dayNames[appointment.date|date('w')] }})</td>
             </tr>
             <tr>
                 <td style="color: #666; padding: 5px 0;"><strong>{{ 'confirm.time' | trans }}:</strong></td>
