--- a/templates/main/homepage.html.twig
+++ b/templates/main/homepage.html.twig
@@ -269,9 +269,44 @@
     <!-- Pricing Area End -->
 
     <!--? Our Team Area Start -->
-
-    // TODO : Add team section with pics
-
+    <section class="team-area section-padding30">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-xl-7 col-lg-8">
+                    <div class="section-tittle text-center mb-55">
+                        <span>{{ 'homepage.team.subtitle' | trans }}</span>
+                        <h2>{{ 'homepage.team.title' | trans }}</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Team Member 1 -->
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="team-card text-center mb-30">
+                        <div class="team-img">
+                            <img src="{{ asset('assets/img/team/barber1.webp') }}" alt="{{ 'homepage.team.member1.name' | trans }}" class="img-fluid">
+                        </div>
+                        <div class="team-caption">
+                            <h3>{{ 'homepage.team.member1.name' | trans }}</h3>
+                            <span>{{ 'homepage.team.member1.role' | trans }}</span>
+                        </div>
+                    </div>
+                </div>
+                <!-- Team Member 2 -->
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div class="team-card text-center mb-30">
+                        <div class="team-img">
+                            <img src="{{ asset('assets/img/team/barber2.webp') }}" alt="{{ 'homepage.team.member2.name' | trans }}" class="img-fluid">
+                        </div>
+                        <div class="team-caption">
+                            <h3>{{ 'homepage.team.member2.name' | trans }}</h3>
+                            <span>{{ 'homepage.team.member2.role' | trans }}</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Our Team Area End -->
 
     <!--? Testimonials Area Start -->
